@@ -123,6 +123,11 @@ Extension Modules
 Library
 -------
 
+- Patch #1120353: The xmlrpclib module provides better, more transparent,
+  support for datetime.{datetime,date,time} objects.  With use_datetime set
+  to True, applications shouldn't have to fiddle with the DateTime wrapper
+  class at all.
+
 - distutils.commands.upload was added to support uploading distribution
   files to PyPI.
 
